--- a/tcf_website/templates/profile/delete_confirm_modal.html
+++ b/tcf_website/templates/profile/delete_confirm_modal.html
@@ -10,6 +10,8 @@
         </div>
         <div class="modal-body">
           Are you sure you want to delete your account?
+          <br><br>
+          Deleting your account will remove any data associated with your profile (reviews, votes, etc.)
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
