--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -1,9 +1,9 @@
 {% extends "base/base.html" %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'profile/profile.css' %}" />
 {% block title %}My Profile - theCourseForum{% endblock %}
 
 {% block styles %}
+<link rel="stylesheet" href="{% static 'profile/profile.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -34,7 +34,7 @@
                 </form>
                 <div class="button-wrapper">
                     <input type="submit" class="btn btn-primary mt-3" form="ProfileForm" value="Save Profile">
-                    <button class="btn btn-primary mt-3" type="button" data-toggle="modal" data-target="#deleteProfileModal{{user.id}}">Delete Profile</button>
+                    <button class="btn btn-danger mt-3" type="button" data-toggle="modal" data-target="#deleteProfileModal{{user.id}}">Delete Profile</button>
                     {% include "profile/delete_confirm_modal.html" with profile=profile %}
                 </div>
             </div>
