adding login form

--- a/tcf_website/templates/login/login_modal.html
+++ b/tcf_website/templates/login/login_modal.html
@@ -18,6 +18,9 @@
               <h2 class="h3 card-title">Welcome to theCourseForum!</h2>
               <p class="card-text mb-3">Please log in to continue.</p>
           </div>
+          <div class="modal-footer d-flex justify-content-center">
+            {% include "login/login_form.html" %}
+          </div>
       </div>
       <div class="modal-footer d-flex justify-content-center">
         {% include "login/login_button.html" %}
