--- a/tcf_website/templates/profile/delete_confirm_modal.html
+++ b/tcf_website/templates/profile/delete_confirm_modal.html
@@ -1,5 +1,5 @@
 <!-- Delete Confirmation Modal -->
-<div class="modal fade" id="deleteProfileModal{{user.id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteProfileModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
