--- a/tcf_website/templates/login/login_modal.html
+++ b/tcf_website/templates/login/login_modal.html
@@ -19,7 +19,7 @@
               <p class="card-text mb-3">Please log in to continue.</p>
           </div>
           <div class="modal-footer d-flex justify-content-center">
-            {% include "login/login_form.html" %}
+            <button><a href="{% url 'register' %}">Create an Account!</a></button>
           </div>
       </div>
       <div class="modal-footer d-flex justify-content-center">
