--- a/tcf_website/templates/common/review-drive-banner.html
+++ b/tcf_website/templates/common/review-drive-banner.html
@@ -2,13 +2,14 @@
      class="alert alert-info alert-dismissible text-left fade show">
   <h4 class="alert-heading">Review Drive - Enter to win!</h4>
   <p>
-    Our Spring 2022 review drive is from 4/10 til 5/6.
+    Our Fall 2022 review drive is from 12/6 until 12/23.
     During this time, any review written gives you one entry
-    to win a <b>$20 gift card!</b>
+    to win a <b>$25 gift card!</b>
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    To enter, write a review for any class and put the hashtag <b>#tCFspring2022</b> in the description!
+    To enter, write a review for any class and put the hashtag <b>#tCFfall22</b> in the description!
+    We've also recently added Microsoft login for first years without Google accounts.
     <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
       Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </a>
