--- a/tcf_website/templates/login/email_verification.html
+++ b/tcf_website/templates/login/email_verification.html
@@ -8,6 +8,6 @@
 
 {% block content %}
 <div class="container-fluid">
-    <p>We've sent an e-mail to {{address}}. Please follow the instructions you see there.</p>
+    <h2>We've sent an e-mail to {{address}}. Please follow the instructions you see there.</h2>
 </div>
 {% endblock %}
