--- a/tcf_website/templates/login/register_form.html
+++ b/tcf_website/templates/login/register_form.html
@@ -7,36 +7,44 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="container-fluid">
     <div class="row d-flex flex-column align-items-center">
         <form action="{% url 'social:complete' 'email' %}" method="post">
             {% csrf_token %}
-            <fieldset>
-                <label for="first_name">Your first name: </label>
-                <input id="first_name" type="text" name="first_name" value="fname">
-            </fieldset>
-            <fieldset>
-                <label for="last_name">Your last name: </label>
-                <input id="last_name" type="text" name="last_name" value="lname">
-            </fieldset>
-            <fieldset>
-                <label for="email">Your email: </label>
-                <input id="email" type="email" name="email" value="jackliu612@gmail.com">
-            </fieldset>
-            {% if error_message %}
-                {% for error in error_message %}
-                    <p><strong>{{ error }}</strong></p>
-                {% endfor %}
-            {% endif %}
-            <fieldset>
-                <label for="password">Your password: </label>
-                <input id="password" type="password" name="password" value="fillerpassword">
-            </fieldset>
-            <fieldset>
-                <label for="password_confirm">Please confirm password: </label>
-                <input id="password_confirm" type="password" name="password_confirm" value="fillerpassword">
-            </fieldset>
-            <input type="submit" value="Create Account">
+            <div class="form-row">
+                <div class="form-group col">
+                    <label for="first_name">First Name</label>
+                    <input id="first_name" class="form-control bg-white" type="text" name="first_name" placeholder="John">
+                </div>
+                <div class="form-group col">
+                    <label for="last_name">Last Name</label>
+                    <input id="last_name" class="form-control bg-white" type="text" name="last_name" placeholder="Doe">
+                </div>
+            </div>
+            <div class="form-group col">
+                <div class="form-group">
+                    <label for="email">Your email: </label>
+                    <input id="email" class="form-control bg-white" type="email" name="email" placeholder="mst3k@virginia.edu">
+                </div>
+                {% if error_message %}
+                    {% for error in error_message %}
+                        <p><strong>{{ error }}</strong></p>
+                    {% endfor %}
+                {% endif %}
+                
+                <div class="form-group">
+                    <label for="password">Your password: </label>
+                    <input id="password" class="form-control bg-white" type="password" name="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label for="password_confirm">Please confirm password: </label>
+                    <input id="password_confirm" class="form-control bg-white" type="password" name="password_confirm" placeholder="Confirm Password">
+                </div>
+            </div>
+            <div class="form-group col">
+                <input type="submit" class="btn btn-primary bg-tcf-indigo" value="Create Account">
+            </div>
         </form>
     </div>
 </div>
