--- a/tcf_website/templates/common/review-drive-banner.html
+++ b/tcf_website/templates/common/review-drive-banner.html
@@ -1,21 +1,22 @@
 <div id="notification-panel" role="alert"
      class="alert alert-info alert-dismissible text-left fade show">
-  <h4 class="alert-heading">Review Drive - Enter to win!</h4>
-  <p>
-    Our Fall 2022 review drive is from 12/6 until 12/23.
-    During this time, any review written gives you one entry
-    to win a <b>$25 gift card!</b>
-  </p>
-  <hr>
-  <p class="mb-0 text-inline">
-    To enter, write a review for any class and put the hashtag <b>#tCFfall22</b> in the description!
-    We've also recently added Microsoft login for first years without Google accounts.
-    <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
-      Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
-    </a>
-  </p>
+    <h4 class="alert-heading">Review Drive - Enter to win!</h4>
+    <p>
+        Our Fall 2022 review drive is from 12/6 until 12/23.
+        During this time, any review written gives you one entry
+        to win a <b>$25 gift card!</b>
+        <br/>
+        We've also recently added email login for first years without Google accounts.
+    </p>
+    <hr>
+    <p class="mb-0 text-inline">
+        To enter, write a review for any class and put the hashtag <b>#tCFfall22</b> in the description!
+        <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
+            Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        </a>
+    </p>
 
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
