--- a/tcf_website/templates/login/login_modal.html
+++ b/tcf_website/templates/login/login_modal.html
@@ -25,7 +25,7 @@
             </div>
             <div class="modal-footer d-flex justify-content-center">
                 <a href="{% url 'register' %}" class="btn btn-lg bg-tcf-orange text-white">Create an Account!</a>
-                {% include "login/login_button.html" %}
+                {% include "login/google_login_button.html" %}
             </div>
         </div>
     </div>
