Progress on answers form

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -308,4 +308,8 @@
         import {loadData} from "{% static 'course/javascript/course_data.js' %}";
         loadData(JSON.parse("{{ data|escapejs }}"))
     </script>
+
+    <!-- For QA Form-->
+    <script type="text/javascript" src="{% static 'qa/new_answer.js' %}"></script>
+
 {% endblock %}
