Possibly got answers form working

--- a/tcf_website/templates/qa/qa.html
+++ b/tcf_website/templates/qa/qa.html
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-end">
-                                    <a data-toggle="modal" data-target="#answer-question-modal" class="btn bg-tcf-orange text-white justify-content-end mt-3">
+                                    <a data-toggle="modal" data-target="#answer-question-modal" data-id="{{ question.id }}" class="btn bg-tcf-orange text-white justify-content-end mt-3" id="answerQuestionBtn">
                                         Answer this Question!
                                     </a>
                                 </div>
